# medium

./: .gitignore  .gitmodules  CMakeLists.txt  eventTypes.h  gamepadInputs.h  input.h  inputGLFW.h  keyCodes.h  medium.h  mediumOpenGL.h  mediumOpenGLBroken.h  mediumOpenGLBrokenButOlder.h  mediumOpenGLoriginal.h  mouseButtons.h
TASKS/20260424181744/: task.txt
TASKS/20260427101342/: task.txt
assets/: crtFrag.glsl  crtFrag2.glsl  crtFrag3.glsl  testFrag.glsl
glad/src/: glad.c
testing/: gpu_system.cpp  main.cpp  new.cpp  test3d.cpp
